--- a/src/components/Table/styles.css
+++ b/src/components/Table/styles.css
@@ -108,4 +108,9 @@
       }
     }
   }
+  &--condensed.table--vertical {
+    .table__cell {
+      padding: var(--spacing-1) var(--spacing-3);
+    }
+  }
 }
